@@ -1,3 +1,11 @@
+2007-11-14  Michael J. Chudobiak  <mjc@svn.gnome.org>
+
+	* src/sj-extracting.c: (check_file_size),
+	(confirm_overwrite_existing_file), (pop_and_extract),
+	(on_completion_cb), (on_extract_activate):
+	Added "Overwrite All" and "Skip All" buttons (in addition to the
+	"Overwrite" and "Skip" buttons) when an existing file is detected.
+
 2007-10-14  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
